# mokap-SWD

./: .gitignore  README.md  config_example.yaml  mokap.py  pi_trigger_cli.py  pyproject.toml  test_ic4_trigger.py
mokap/calibration/: bundle_adjustment.py  common.py  detectors.py  monocular.py  multiview.py
mokap/core/: manager.py
mokap/core/cameras/: basler.py  camerafactory.py  genicam.py  ic4imaging.py  interface.py
mokap/core/triggers/: raspberry.py
mokap/geometry/: __init__.py  backend.py  fitting.py  projective.py  transforms.py
mokap/gui/: _widgets.py
mokap/gui/widgets/: widgets_base.py  window_central_calib.py  window_maincontrols.py  windows_live_views.py
mokap/gui/workers/: worker_monocular.py  worker_multiview.py
mokap/reconstruction/: anatomy.py  config.py  datatypes.py  debug_skeletons_viewer.py  linking.py  reconstruction.py  reconstruction_debug.py  run.py  tracking.py  utils.py
mokap/reconstruction/debug/: run_debug_visualisation.py  visualisation.py
mokap/reconstruction/debug_stuff/: skeletons_viewer.py  visualise_reconstruction.py
mokap/utils/: __utils.py  datatypes.py  fileio.py  system.py  visualisation.py
mokap/utils/geometry/: __init__.py  backend.py  fitting.py  projective.py  transforms.py
scripts/: calibrate.py  debug_calibration.py
some_tests/: tiangulation_test.py  triangulation_test.py
